# mcfriendo

./: Cargo.toml  LICENSE  README.md  setup.sh
.github/workflows/: deploy.yml
src/: main.rs
src/commands/: mod.rs
src/db/: mod.rs  schema.sql
src/errors/: mod.rs
src/handlers/: mod.rs
src/services/: mod.rs
