[package]
name = "mcfriendo"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.15.0", features = ["macros", "webhooks"] }
tokio = { version = "1.37", features = ["full"] }
postgres = { version = "0.19.10", features = ["with-chrono-0_4"] }
sentry = { version = "0.39.0", features = ["anyhow", "backtrace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dotenvy = "0.15"
log = "0.4"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
